--- a/pages/index.css
+++ b/pages/index.css
@@ -38,3 +38,5 @@
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__input-error/form__input-error.css);
 @import url(../blocks/form/__input-error/_active/form__input-error_active.css);
+@import url(../blocks/form/__btn-save/_disabled/form__btn-save_disabled.css);
+@import url(../blocks/form/__input/_texterror/form__input-texterror.css);
