--- a/src/blocks/form/__btn-save/_disabled/form__btn-save_disabled.css
+++ b/src/blocks/form/__btn-save/_disabled/form__btn-save_disabled.css
@@ -2,4 +2,5 @@
     color: rgba(0, 0, 0, 0.2);
     background-color: transparent;
     border: 1px solid rgba(0, 0, 0, 0.2);
+    cursor: default;
 }
