--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -13,6 +13,8 @@
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__btn-edit/profile__btn-edit.css);
 @import url(../blocks/profile/__btn-add/profile__btn-add.css);
+@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
+@import url(../blocks/profile/__btn-avatar-edit/profile__btn-avatar-edit.css);
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
 @import url(../blocks/elements/__list/elements__list.css);
@@ -22,6 +24,8 @@
 @import url(../blocks/element/__btn-like/_active/element__btn-like_active.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__title/element__title.css);
+@import url(../blocks/element/__likes-container/element__likes-container.css);
+@import url(../blocks/element/__num-of-likes/element__num-of-likes.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
@@ -40,3 +44,4 @@
 @import url(../blocks/form/__input-error/_active/form__input-error_active.css);
 @import url(../blocks/form/__btn-save/_disabled/form__btn-save_disabled.css);
 @import url(../blocks/form/__input/_texterror/form__input-texterror.css);
+
