--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -3,7 +3,7 @@
     background-color: #ffffff;
     border-radius: 10px;
     /*display: flex;*/
-    min-height: 330px;
+    /*min-height: 330px;*/
     width: 430px;
     padding: 0px;
     /*border: fuchsia dotted;*/
